@@ -1,3 +1,0 @@
-- verify translation system
-- make translations
-- make packaging, setup.py
