@@ -1,4 +1,6 @@
 2004-01-26
+	fixed translation system, gettext is called now :)
+2004-01-26
 	translation and installation system
 2004-01-17 
 	buffered mode for ftp (no more a tmp file)
